--- a/test.css
+++ b/test.css
@@ -2,10 +2,10 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   gap: 15px 15px;
-  grid-template-areas: "Contacts Contacts Contacts Contacts Contacts" "Contacts Contacts Contacts Contacts Contacts" "Lectures Labs Lecture-recordings Readings Assessment" "Announcements Discussion-forum Timetable DRPS Handbooks";
+  grid-template-areas: "Contacts Contacts Contacts" "Contacts Contacts Contacts" "Announcements Lectures Lecture-recordings" "Labs Discussion-forum Assessment" "Contacts Contacts Contacts";
 }
 
 .Contacts { grid-area: Contacts;
@@ -42,7 +42,7 @@ background-color: #e5e5e5;}
 background-color: #e5e5e5;}
 
 /* For presentation only, no need to copy the code below */
-.grid-container * {
+/*.grid-container * {
  border: 1px solid #ffff;
   border-radius: 5px;
   position: relative;
@@ -53,4 +53,4 @@ background-color: #e5e5e5;}
  position: absolute;
  top: 0;
  left: 0;
-}
+}*/
