--- a/test.css
+++ b/test.css
@@ -1,56 +1,56 @@
-.grid-container { height: 100%; margin: 0; min-height: 300px}
-
+.grid-container { height: 100%; margin: 0; }
+ 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 15px 15px;
-  grid-template-areas: "Contacts Contacts Contacts" "Contacts Contacts Contacts" "Announcements Lectures Lecture-recordings" "Labs Discussion-forum Assessment" "Contacts Contacts Contacts";
+  grid-template-areas: "Contacts Contacts Contacts Contacts Contacts" "Contacts Contacts Contacts Contacts Contacts" "Lectures Labs Lecture-recordings Readings Assessment" "Announcements Discussion-forum Timetable DRPS Handbooks";
 }
-
-.Contacts { grid-area: Contacts;
+ 
+.Contacts { grid-area: Contacts; 
   background-color: #e5e5e5; }
-
-.Lectures { grid-area: Lectures;
+ 
+.Lectures { grid-area: Lectures; 
   background-color: #e5e5e5; }
-
+ 
 .Labs { grid-area: Labs;
 background-color: #e5e5e5;}
-
+ 
 .Lecture-recordings { grid-area: Lecture-recordings;
 background-color: #e5e5e5;}
-
+ 
 .Assessment { grid-area: Assessment;
 background-color: #e5e5e5;}
-
+ 
 .Announcements { grid-area: Announcements;
 background-color: #e5e5e5;}
-
+ 
 .Discussion-forum { grid-area: Discussion-forum;
 background-color: #e5e5e5;}
-
+ 
 .Readings { grid-area: Readings;
 background-color: #e5e5e5;}
-
+ 
 .Timetable { grid-area: Timetable;
 background-color: #e5e5e5;}
-
+ 
 .DRPS { grid-area: DRPS;
 background-color: #e5e5e5;}
-
+ 
 .Handbooks { grid-area: Handbooks;
 background-color: #e5e5e5;}
-
+ 
 /* For presentation only, no need to copy the code below */
-/*.grid-container * {
+.grid-container * { 
  border: 1px solid #ffff;
-  border-radius: 5px;
+  border-radius: 5px; 
   position: relative;
 }
-
-.grid-container *:after {
+ 
+.grid-container *:after { 
  content:attr(class);
  position: absolute;
  top: 0;
  left: 0;
-}*/
+}
