--- a/test2.css
+++ b/test2.css
@@ -1,5 +1,5 @@
 .grid-container { height: 100%; margin: 0; min-height: 500px}
- 
+
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -7,39 +7,47 @@
   gap: 15px 15px;
   grid-template-areas: "Contacts Contacts Contacts" "Contacts Contacts Contacts" "Announcements Lectures Lecture-recordings" "Labs Discussion-forum Assessment" "Links Links Links";
 }
- 
-.Contacts { grid-area: Contacts; 
+
+.Contacts { grid-area: Contacts;
   background-color: #e5e5e5; }
- 
-.Lectures { grid-area: Lectures; 
+
+.Lectures { grid-area: Lectures;
   background-color: #e5e5e5; }
- 
+
 .Labs { grid-area: Labs;
 background-color: #e5e5e5;}
 
 .Lecture-recordings { grid-area: Lecture-recordings;
 background-color: #e5e5e5;}
- 
+
 .Assessment { grid-area: Assessment;
 background-color: #e5e5e5;}
- 
+
 .Announcements { grid-area: Announcements;
 background-color: #e5e5e5;}
- 
+
 .Discussion-forum { grid-area: Discussion-forum;
 background-color: #e5e5e5;}
- 
+
 .Links { grid-area: Links;
 background-color: #e5e5e5;}
 
+
+.Lectures, .Labs, .Lecture-recordings, .Assessment, .Announcements, .Discussion-forum{
+  vertical-align: middle;
+  text-align: center;
+  font-family: "Arial, Helvetica, sans-serif";
+}
+
+
 /* For presentation only, no need to copy the code below */
-/*.grid-container * { 
+/*.grid-container * {
  border: 1px solid #ffff;
-  border-radius: 5px; 
+  border-radius: 5px;
   position: relative;
 }
- 
-.grid-container *:after { 
+
+.grid-container *:after {
  content:attr(class);
  position: absolute;
  top: 0;
