--- a/test2.css
+++ b/test2.css
@@ -37,6 +37,9 @@ background-color: #e5e5e5;}
   vertical-align: middle;
   text-align: center;
   font-family: "Arial, Helvetica, sans-serif";
+  border: 2px solid #bdbdbd;
+  padding: 10px;
+  border-radius: 25px;
 }
 
 
