--- a/test2.css
+++ b/test2.css
@@ -9,10 +9,10 @@
 }
 
 .Contacts { grid-area: Contacts;
-  background-color: #F3F2E1; }
+  background-color: #FEFEEE; }
 
 .Links { grid-area: Links;
-  background-color: #F3F2E1;}
+  background-color: #FEFEEE;}
 
 .Lectures { grid-area: Lectures;
   background-color: #44AF69; }
@@ -43,18 +43,20 @@ background-color: #83BAB4;}
   color: black;
   padding: 10px;
   border-radius: 5px;
+  font-size: 25px;
 }
 
 .Contacts, .Links{
   text-align: left;
-  padding: 10px;
+  padding: 20px;
   border-radius: 5px;
 }
 
 
 @media only screen and (max-width: 600px) {
   .grid-container {
-    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
