--- a/template_learn/template_learn.css
+++ b/template_learn/template_learn.css
@@ -7,7 +7,8 @@
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  /*grid-template-rows: 1fr 1fr 1fr;*/
+  grid-auto-rows: 1fr;
   gap: 15px 15px;
   grid-template-areas: "Contacts Contacts Contacts Contacts" "Contacts Contacts Contacts Contacts" "Lectures Lecture-recordings Labs Announcements" "Discussion-forum Assessment Quizzes Timetabling";
 }
