--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -6,11 +6,11 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   /*grid-template-rows: 1fr 1fr 1fr;*/
   grid-auto-rows: 1fr;
   gap: 15px 15px;
-  grid-template-areas: "Contacts Contacts Contacts Contacts Contacts" "Contacts Contacts Contacts Contacts Contacts" "Weekly Weekly Weekly Weekly Weekly" "Announcements Discussion-forum Assessment Quizzes Timetabling";
+  grid-template-areas: "Contacts Contacts Contacts Contacts" "Contacts Contacts Contacts Contacts" "Weekly Weekly Weekly Weekly" "Announcements Discussion-forum Assessment Timetabling";
 }
 
 .Contacts { grid-area: Contacts;
@@ -81,9 +81,9 @@ background-color: #cce5d6;}
     margin-right: 2.5%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 15px 15px;
-    grid-template-areas: "Contacts" "Contacts" "Weekly" "Announcements" "Discussion-forum" "Assessment" "Quizzes" "Timetabling";
+    grid-template-areas: "Contacts" "Contacts" "Weekly" "Announcements" "Discussion-forum" "Assessment" "Timetabling";
   }
 }
 
