--- a/template_learn/ordlist.css
+++ b/template_learn/ordlist.css
@@ -2,7 +2,7 @@ ol {
     counter-reset: li; /* Initiate a counter */
     list-style: none; /* Remove default numbering */
     *list-style: decimal; /* Keep using default numbering for IE6/7 */
-    font: 15px 'trebuchet MS', 'lucida sans';
+    /*font: 15px 'trebuchet MS', 'lucida sans';*/
     padding: 0;
     margin-bottom: 4em;
     text-shadow: 0 1px 0 rgba(255,255,255,.5);
@@ -11,7 +11,7 @@ ol {
 ol ol {
     margin: 0 0 0 2em; /* Add some left margin for inner lists */
 }
-.rounded-list a{
+.rounded-list li{
    position: relative;
    display: block;
    padding: .4em .4em .4em 2em;
@@ -23,13 +23,13 @@ ol ol {
    border-radius: .3em;
    transition: all .3s ease-out;
 }
-.rounded-list a:hover{
+.rounded-list li:hover{
    background: #eee;
 }
-.rounded-list a:hover:before{
+.rounded-list li:hover:before{
     transform: rotate(360deg);
 }
-.rounded-list a:before{
+.rounded-list li:before{
     content: counter(li);
     counter-increment: li;
     position: absolute;
