--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -71,6 +71,7 @@ background-color: #cce5d6;}
     display:inline-block;
     margin: 15px;
     vertical-align: top;
+    font-size: 20px;
 }
 
 
@@ -81,7 +82,8 @@ background-color: #cce5d6;}
     margin-right: 2.5%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+/*     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
+    grid-auto-rows: 1fr;
     gap: 15px 15px;
     grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Discussion-forum" "Assessment" "Timetabling";
   }
