--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -64,6 +64,7 @@ background-color: #cce5d6;}
   text-align: left;
   padding: 20px;
   border-radius: 5px;
+  font-size: 20px;
 }
 
 .cont-col{
@@ -71,7 +72,6 @@ background-color: #cce5d6;}
     display:inline-block;
     margin: 15px;
     vertical-align: top;
-    font-size: 20px;
 }
 
 
@@ -82,10 +82,9 @@ background-color: #cce5d6;}
     margin-right: 2.5%;
     display: grid;
     grid-template-columns: 1fr;
-/*     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
-    grid-auto-rows: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 15px 15px;
-    grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Discussion-forum" "Assessment" "Timetabling";
+    grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling";
   }
 }
 
