--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -86,6 +86,12 @@ background-color: #cce5d6;}
     gap: 15px 15px;
     grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling";
   }
+  .cont-col{
+    width: 100%;
+    display:block;
+    margin: 15px;
+    vertical-align: top;
+  }
 }
 
 
