--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -76,21 +76,21 @@ background-color: #cce5d6;}
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 736px) and (min-width: 0) {
   .grid-container {
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 15px 15px;
-    grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling";
+    margin-left: 2.5% !important;
+    margin-right: 2.5% !important;
+    display: grid !important;
+    grid-template-columns: 1fr !important;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr !important;
+    gap: 15px 15px !important;
+    grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling" !important;
   }
   .cont-col{
-    width: 100%;
-    display:block;
-    margin: 15px;
-    vertical-align: top;
+    width: 100% !important;
+    display:block !important;
+    margin: 15px !important;
+    vertical-align: top !important;
   }
 }
 
