--- a/template_learn/ordlist.css
+++ b/template_learn/ordlist.css
@@ -12,7 +12,7 @@ ol ol {
     margin: 0 0 0 2em; /* Add some left margin for inner lists */
 }
 .rounded-list li{
-   position: relative;
+/*    position: relative; */
    display: block;
    padding: .4em .4em .4em 2em;
    *padding: .4em;
