--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -78,20 +78,19 @@ background-color: #cce5d6;}
 
 @media only screen and (max-width: 736px) and (min-width: 0) {
   .grid-container {
+    width: 95%;
     margin-left: 2.5% !important;
     margin-right: 2.5% !important;
-    display: grid !important;
     grid-template-columns: 1fr !important;
-    grid-auto-rows: auto !important;
+    grid-auto-rows: min-content !important;
     gap: 15px 15px !important;
     grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling" !important;
   }
   .cont-col{
-    width: 90% !important;
+    width: auto;
     display:block !important;
     margin-left: 15px !important;
     margin-right: 15px !important;
-    vertical-align: top !important;
   }
 }
 
