--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -62,7 +62,6 @@ background-color: #cce5d6;}
 
 .Contacts{
   text-align: left;
-  padding: 20px;
   border-radius: 5px;
   font-size: 20px;
 }
@@ -78,9 +77,9 @@ background-color: #cce5d6;}
 
 @media only screen and (max-width: 736px){
   .grid-container {
-    width: 95%;
-    margin-left: 2.5% !important;
-    margin-right: 2.5% !important;
+    width: auto;
+    padding-left: 2.5% !important;
+    padding-right: 2.5% !important;
     grid-template-columns: 1fr !important;
     grid-auto-rows: min-content !important;
     gap: 15px 15px !important;
