--- a/template_learn/ordlist.css
+++ b/template_learn/ordlist.css
@@ -17,7 +17,8 @@ ol ol {
    display: block;
    padding: .4em .4em .4em 2em;
    *padding: .4em;
-   margin: .5em 0;
+   margin: 1em 0;
+   font-size: 20px;
    background: #ddd;
    color: #444;
    text-decoration: none;
@@ -27,9 +28,9 @@ ol ol {
 .rounded-list li:hover{
    background: #eee;
 }
-.rounded-list li:hover:before{
+/*.rounded-list li:hover:before{
     transform: rotate(360deg);
-}
+}*/
 .rounded-list li:before{
     content: counter(li);
     counter-increment: li;
