--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -6,11 +6,11 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   /*grid-template-rows: 1fr 1fr 1fr;*/
   grid-auto-rows: 1fr;
   gap: 15px 15px;
-  grid-template-areas: "Contacts Contacts Contacts" "Contacts Contacts Contacts" "Weekly Weekly Discussion-forum" "Announcements Assessment Timetabling";
+  grid-template-areas: "Contacts Contacts Contacts Contacts" "Contacts Contacts Contacts Contacts" "Weekly Weekly Weekly Discussion-forum" "Announcements Assessment Timetabling FAQ";
 }
 
 .Contacts { grid-area: Contacts;
@@ -19,20 +19,11 @@
 .Weekly { grid-area: Weekly;
   background-color: #44AF69; }
 
-.Lectures { grid-area: Lectures;
-  background-color: #44AF69; }
-
-.Lecture-recordings { grid-area: Lecture-recordings;
-background-color: #44AF69;}
-
-.Labs { grid-area: Labs;
+.FAQ { grid-area: FAQ;
 background-color: #2B9EB3;}
 
 .Assessment { grid-area: Assessment;
 background-color: #FCAB10;}
-
-.Quizzes { grid-area: Quizzes;
-background-color: #aaad75;}
 
 .Announcements { grid-area: Announcements;
 background-color: #FA5D5F}
@@ -44,7 +35,7 @@ background-color: #83BAB4;}
 background-color: #cce5d6;}
 
 
-.Lectures, .Labs, .Lecture-recordings, .Assessment, .Announcements, .Discussion-forum, .Timetabling, .Quizzes, .Weekly{
+.FAQ, .Assessment, .Announcements, .Discussion-forum, .Timetabling, .Weekly{
   display: inline-flex;
   align-items: center;
   text-align: center;
@@ -55,7 +46,7 @@ background-color: #cce5d6;}
   font-size: 22px;
 }
 
-.Lectures i, .Labs i, .Lecture-recordings i, .Assessment i, .Announcements i, .Discussion-forum i, .Timetabling i, .Quizzes i, .Weekly i{
+.FAQ i, .Assessment i, .Announcements i, .Discussion-forum i, .Timetabling i, .Weekly i{
     margin: 10px;
 }
 
@@ -83,7 +74,7 @@ background-color: #cce5d6;}
     grid-template-columns: 1fr !important;
     grid-auto-rows: min-content !important;
     gap: 15px 15px !important;
-    grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling" !important;
+    grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling FAQ" !important;
   }
   .cont-col{
     width: auto;
