--- a/template_learn/template_learn2.css
+++ b/template_learn/template_learn2.css
@@ -74,7 +74,7 @@ background-color: #cce5d6;}
     grid-template-columns: 1fr !important;
     grid-auto-rows: min-content !important;
     gap: 15px 15px !important;
-    grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling FAQ" !important;
+    grid-template-areas: "Contacts" "Contacts" "Weekly" "Discussion-forum" "Announcements" "Assessment" "Timetabling" "FAQ" !important;
   }
   .cont-col{
     width: auto;
