--- a/template_learn/ordlist.css
+++ b/template_learn/ordlist.css
@@ -16,9 +16,9 @@ ol ol {
    position: relative;
    display: block;
    padding: .4em .4em .4em 2em;
-   *padding: .4em;
-   margin: 1em 0;
-   font-size: 20px;
+/*    *padding: .4em; */
+   margin: .5em 0;
+   font-size: 16px;
    background: #ddd;
    color: #444;
    text-decoration: none;
