--- a/template_learn/ordlist.css
+++ b/template_learn/ordlist.css
@@ -1,5 +1,4 @@
 ol {
-    display: block;
     max-width: 95%;
     counter-reset: li; /* Initiate a counter */
     list-style: none; /* Remove default numbering */
@@ -18,7 +17,7 @@ ol ol {
    display: block;
    padding: .4em .4em .4em 2em;
 /*    *padding: .4em; */
-   margin: .5em 0;
+   margin: .5em .5em;
    font-size: 16px;
    background: #ddd;
    color: #444;
