--- a/template_learn/week_collapse.css
+++ b/template_learn/week_collapse.css
@@ -12,7 +12,7 @@
 .active, .collapsible:hover {
   background-color: #ccc;
 }
-.content {
+.content2 {
   padding: 0 18px;
   max-height: 0;
   overflow: hidden;
